// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`landing copy sections > matches the payout methods strip snapshot 1`] = `
<DocumentFragment>
  <section
    class="logo-band"
  >
    <div
      class="container trust-logos"
    >
      <span>
        <svg
          class="lucide lucide-credit-card"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="14"
            rx="2"
            width="20"
            x="2"
            y="5"
          />
          <line
            x1="2"
            x2="22"
            y1="10"
            y2="10"
          />
        </svg>
         PayPal Payouts
      </span>
      <span>
        <svg
          class="lucide lucide-gift"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="4"
            rx="1"
            width="18"
            x="3"
            y="8"
          />
          <path
            d="M12 8v13"
          />
          <path
            d="M19 12v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7"
          />
          <path
            d="M7.5 8a2.5 2.5 0 0 1 0-5A4.8 8 0 0 1 12 8a4.8 8 0 0 1 4.5-5 2.5 2.5 0 0 1 0 5"
          />
        </svg>
         Tremendous gift cards
      </span>
      <span>
        <svg
          class="lucide lucide-bitcoin"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11.767 19.089c4.924.868 6.14-6.025 1.216-6.894m-1.216 6.894L5.86 18.047m5.908 1.042-.347 1.97m1.563-8.864c4.924.869 6.14-6.025 1.215-6.893m-1.215 6.893-3.94-.694m5.155-6.2L8.29 4.26m5.908 1.042.348-1.97M7.48 20.364l3.126-17.727"
          />
        </svg>
         Crypto withdrawals
      </span>
      <span>
        <svg
          class="lucide lucide-lock"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="11"
            rx="2"
            ry="2"
            width="18"
            x="3"
            y="11"
          />
          <path
            d="M7 11V7a5 5 0 0 1 10 0v4"
          />
        </svg>
         Manual review first
      </span>
    </div>
  </section>
</DocumentFragment>
`;

exports[`landing copy sections > matches the pending and reversal FAQ snapshot 1`] = `
<DocumentFragment>
  <section>
    <div
      class="container faq-wrap"
    >
      <div>
        <h2>
          Why rewards may pend or reverse
        </h2>
        <p>
          Clear rules reduce support tickets and help users understand reward timing before they start.
        </p>
      </div>
      <div
        class="faq-grid"
      >
        <article
          data-open="true"
        >
          <h3>
            Why do some rewards pend before becoming available?
          </h3>
          <p>
            Some providers confirm completions after a callback, quality check, or advertiser review. EarnWave shows pending rewards separately so users know what is still being verified.
          </p>
        </article>
        <article
          data-open="false"
        >
          <h3>
            Why can a reward reverse?
          </h3>
          <p>
            Rewards may reverse when a provider reports chargeback, duplicate account activity, VPN/proxy abuse, failed offer requirements, or advertiser rejection.
          </p>
        </article>
        <article
          data-open="false"
        >
          <h3>
            When can I cash out?
          </h3>
          <p>
            Available rewards can be withdrawn after the minimum cashout is met. Withdrawals enter review first for fraud protection.
          </p>
        </article>
        <article
          data-open="false"
        >
          <h3>
            Which payout methods are supported?
          </h3>
          <p>
            EarnWave is built for PayPal Payouts, Tremendous gift cards, crypto withdrawals, and manual approval before automation runs.
          </p>
        </article>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`landing copy sections > matches the pending versus available explainer snapshot 1`] = `
<DocumentFragment>
  <section
    class="split-section"
  >
    <div
      class="container split-grid"
    >
      <div>
        <div>
          <h2>
            Pending vs available rewards
          </h2>
          <p>
            EarnWave separates reward status so users understand what can be withdrawn and what is still being verified.
          </p>
        </div>
        <div
          class="security-list"
        >
          <div
            class="security-row status-explainer-row"
          >
            <svg
              class="lucide lucide-circle-check-big"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.801 10A10 10 0 1 1 17 3.335"
              />
              <path
                d="m9 11 3 3L22 4"
              />
            </svg>
            <span>
              <strong>
                Available rewards
              </strong>
              Cleared rewards already credited to your balance and eligible for withdrawal once you meet the minimum cashout.
            </span>
          </div>
          <div
            class="security-row status-explainer-row"
          >
            <svg
              class="lucide lucide-circle-check-big"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21.801 10A10 10 0 1 1 17 3.335"
              />
              <path
                d="m9 11 3 3L22 4"
              />
            </svg>
            <span>
              <strong>
                Pending rewards
              </strong>
              Tracked rewards waiting on provider callback, hold period, duplicate checks, or manual fraud review.
            </span>
          </div>
        </div>
      </div>
      <div
        class="card security-panel"
      >
        <div
          class="risk-score"
        >
          <span>
            Reward status
          </span>
          <strong>
            Clear
          </strong>
        </div>
        <div
          class="row"
        >
          <span>
            Available balance
          </span>
          <span
            class="pill"
          >
            $48.75
          </span>
        </div>
        <div
          class="row"
        >
          <span>
            Pending verification
          </span>
          <span
            class="pill blue"
          >
            $12.40
          </span>
        </div>
        <div
          class="row"
        >
          <span>
            Manual payout review
          </span>
          <span
            class="pill"
          >
            Required
          </span>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`landing copy sections > matches the redacted payout proof snapshot 1`] = `
<DocumentFragment>
  <section>
    <div
      class="container"
    >
      <div>
        <h2>
          Payout proof, without exposing private details
        </h2>
        <p>
          Example payout records are redacted to show credibility while protecting member identities and transaction data.
        </p>
      </div>
      <div
        class="testimonial-grid"
      >
        <div
          class="card testimonial-card payout-proof-card"
        >
          <div
            aria-label="Verified payout"
            class="stars"
          >
            <svg
              class="lucide lucide-star"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
            <svg
              class="lucide lucide-star"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
            <svg
              class="lucide lucide-star"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
            <svg
              class="lucide lucide-star"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
            <svg
              class="lucide lucide-star"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
          </div>
          <h3>
            $25.00 via PayPal
          </h3>
          <p>
            Survey streak and app offer payout approved after review.
          </p>
          <div
            class="row"
          >
            <div>
              <strong>
                Maya R.
              </strong>
              <p>
                TXN ****-8421
              </p>
            </div>
            <span
              class="pill blue"
            >
              Redacted
            </span>
          </div>
        </div>
        <div
          class="card testimonial-card payout-proof-card"
        >
          <div
            aria-label="Verified payout"
            class="stars"
          >
            <svg
              class="lucide lucide-star"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
            <svg
              class="lucide lucide-star"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
            <svg
              class="lucide lucide-star"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
            <svg
              class="lucide lucide-star"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
            <svg
              class="lucide lucide-star"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
          </div>
          <h3>
            $10.00 via Gift Card
          </h3>
          <p>
            Tremendous reward delivered to verified email.
          </p>
          <div
            class="row"
          >
            <div>
              <strong>
                Jon T.
              </strong>
              <p>
                Order ****-1198
              </p>
            </div>
            <span
              class="pill blue"
            >
              Redacted
            </span>
          </div>
        </div>
        <div
          class="card testimonial-card payout-proof-card"
        >
          <div
            aria-label="Verified payout"
            class="stars"
          >
            <svg
              class="lucide lucide-star"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
            <svg
              class="lucide lucide-star"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
            <svg
              class="lucide lucide-star"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
            <svg
              class="lucide lucide-star"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
            <svg
              class="lucide lucide-star"
              fill="none"
              height="15"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11.525 2.295a.53.53 0 0 1 .95 0l2.31 4.679a2.123 2.123 0 0 0 1.595 1.16l5.166.756a.53.53 0 0 1 .294.904l-3.736 3.638a2.123 2.123 0 0 0-.611 1.878l.882 5.14a.53.53 0 0 1-.771.56l-4.618-2.428a2.122 2.122 0 0 0-1.973 0L6.396 21.01a.53.53 0 0 1-.77-.56l.881-5.139a2.122 2.122 0 0 0-.611-1.879L2.16 9.795a.53.53 0 0 1 .294-.906l5.165-.755a2.122 2.122 0 0 0 1.597-1.16z"
              />
            </svg>
          </div>
          <h3>
            $42.50 via Crypto
          </h3>
          <p>
            Crypto withdrawal approved from the manual queue.
          </p>
          <div
            class="row"
          >
            <div>
              <strong>
                Alex P.
              </strong>
              <p>
                Wallet 0x8F****91
              </p>
            </div>
            <span
              class="pill blue"
            >
              Redacted
            </span>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`landing copy sections > matches the structured FAQ markup snapshot 1`] = `
<DocumentFragment>
  <script
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"FAQPage","mainEntity":[{"@type":"Question","name":"Why do some rewards pend before becoming available?","acceptedAnswer":{"@type":"Answer","text":"Some providers confirm completions after a callback, quality check, or advertiser review. EarnWave shows pending rewards separately so users know what is still being verified."}},{"@type":"Question","name":"Why can a reward reverse?","acceptedAnswer":{"@type":"Answer","text":"Rewards may reverse when a provider reports chargeback, duplicate account activity, VPN/proxy abuse, failed offer requirements, or advertiser rejection."}},{"@type":"Question","name":"When can I cash out?","acceptedAnswer":{"@type":"Answer","text":"Available rewards can be withdrawn after the minimum cashout is met. Withdrawals enter review first for fraud protection."}},{"@type":"Question","name":"Which payout methods are supported?","acceptedAnswer":{"@type":"Answer","text":"EarnWave is built for PayPal Payouts, Tremendous gift cards, crypto withdrawals, and manual approval before automation runs."}}]}
  </script>
</DocumentFragment>
`;

exports[`landing copy sections > matches the three-step how it works snapshot 1`] = `
<DocumentFragment>
  <section>
    <div
      class="container"
    >
      <div>
        <h2>
          How EarnWave works
        </h2>
        <p>
          A simple three-step flow from verified account to reviewed payout.
        </p>
      </div>
      <div
        class="process-grid three-step-grid"
      >
        <div
          class="card process-card"
        >
          <span
            class="rank"
          >
            1
          </span>
          <h3>
            Create a verified account
          </h3>
          <p>
            Sign up, confirm your email, and keep one account per person so rewards can be reviewed cleanly.
          </p>
        </div>
        <div
          class="card process-card"
        >
          <span
            class="rank"
          >
            2
          </span>
          <h3>
            Choose an earning method
          </h3>
          <p>
            Start with surveys, offerwalls, games, daily streaks, referrals, or bonus codes from your dashboard.
          </p>
        </div>
        <div
          class="card process-card"
        >
          <span
            class="rank"
          >
            3
          </span>
          <h3>
            Track rewards to payout
          </h3>
          <p>
            Available rewards can be withdrawn; pending rewards wait for provider approval or fraud review.
          </p>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`landing copy sections > matches the trust-focused hero copy snapshot 1`] = `
<DocumentFragment>
  <section
    class="hero"
  >
    <div
      aria-hidden="true"
      class="hero-orbit"
    />
    <div
      class="container hero-grid"
    >
      <div
        class="hero-copy-block"
      >
        <div
          class="eyebrow"
        >
          <svg
            class="lucide lucide-shield-check"
            fill="none"
            height="16"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 13c0 5-3.5 7.5-7.66 8.95a1 1 0 0 1-.67-.01C7.5 20.5 4 18 4 13V6a1 1 0 0 1 1-1c2 0 4.5-1.2 6.24-2.72a1.17 1.17 0 0 1 1.52 0C14.51 3.81 17 5 19 5a1 1 0 0 1 1 1z"
            />
            <path
              d="m9 12 2 2 4-4"
            />
          </svg>
           Verified earning, reviewed payouts, transparent reward status
        </div>
        <h1>
          Earn cash rewards from surveys, offers, games, and daily bonuses.
        </h1>
        <p
          class="hero-copy"
        >
          EarnWave helps members find concrete earning methods, track pending versus available rewards, and cash out through reviewed payout flows built for trust.
        </p>
        <div
          class="hero-methods"
        >
          <div
            class="hero-method"
          >
            <svg
              class="lucide lucide-clipboard-list"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="4"
                rx="1"
                ry="1"
                width="8"
                x="8"
                y="2"
              />
              <path
                d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"
              />
              <path
                d="M12 11h4"
              />
              <path
                d="M12 16h4"
              />
              <path
                d="M8 11h.01"
              />
              <path
                d="M8 16h.01"
              />
            </svg>
            <strong>
              Surveys
            </strong>
            <span>
              $0.40-$6
            </span>
          </div>
          <div
            class="hero-method"
          >
            <svg
              class="lucide lucide-gift"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="4"
                rx="1"
                width="18"
                x="3"
                y="8"
              />
              <path
                d="M12 8v13"
              />
              <path
                d="M19 12v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7"
              />
              <path
                d="M7.5 8a2.5 2.5 0 0 1 0-5A4.8 8 0 0 1 12 8a4.8 8 0 0 1 4.5-5 2.5 2.5 0 0 1 0 5"
              />
            </svg>
            <strong>
              Offerwalls
            </strong>
            <span>
              $3-$45
            </span>
          </div>
          <div
            class="hero-method"
          >
            <svg
              class="lucide lucide-gamepad2"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="6"
                x2="10"
                y1="11"
                y2="11"
              />
              <line
                x1="8"
                x2="8"
                y1="9"
                y2="13"
              />
              <line
                x1="15"
                x2="15.01"
                y1="12"
                y2="12"
              />
              <line
                x1="18"
                x2="18.01"
                y1="10"
                y2="10"
              />
              <path
                d="M17.32 5H6.68a4 4 0 0 0-3.978 3.59c-.006.052-.01.101-.017.152C2.604 9.416 2 14.456 2 16a3 3 0 0 0 3 3c1 0 1.5-.5 2-1l1.414-1.414A2 2 0 0 1 9.828 16h4.344a2 2 0 0 1 1.414.586L17 18c.5.5 1 1 2 1a3 3 0 0 0 3-3c0-1.545-.604-6.584-.685-7.258-.007-.05-.011-.1-.017-.151A4 4 0 0 0 17.32 5z"
              />
            </svg>
            <strong>
              Play Games
            </strong>
            <span>
              $2-$35
            </span>
          </div>
        </div>
        <div
          class="actions"
        >
          <button
            class="btn xl"
          >
            Create Verified Account 
            <svg
              class="lucide lucide-arrow-right"
              fill="none"
              height="18"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="m12 5 7 7-7 7"
              />
            </svg>
          </button>
          <button
            class="btn alt xl"
          >
            Browse Earning Methods
          </button>
        </div>
        <div
          class="trust-strip"
        >
          <div
            class="trust-item"
          >
            <strong>
              $0.50
            </strong>
            <p>
              Minimum cashout path
            </p>
          </div>
          <div
            class="trust-item"
          >
            <strong>
              Review
            </strong>
            <p>
              Every withdrawal checked
            </p>
          </div>
          <div
            class="trust-item"
          >
            <strong>
              Ledger
            </strong>
            <p>
              Credits and reversals tracked
            </p>
          </div>
        </div>
      </div>
      <div
        aria-label="Earnings dashboard preview"
        class="hero-product"
      >
        <div
          class="dash-window"
        >
          <div
            class="window-top"
          >
            <span />
            <span />
            <span />
            <strong>
              EarnWave Rewards
            </strong>
          </div>
          <div
            class="balance-panel hero-balance"
          >
            <div>
              <p>
                Available balance
              </p>
              <div
                class="balance count-up"
              >
                $48.75
              </div>
            </div>
            <span
              class="tag blue"
            >
              <svg
                class="lucide lucide-trending-up"
                fill="none"
                height="14"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="14"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polyline
                  points="22 7 13.5 15.5 8.5 10.5 2 17"
                />
                <polyline
                  points="16 7 22 7 22 13"
                />
              </svg>
               $12.40 pending review
            </span>
            <div
              data-meter="76"
            />
            <p>
              Pending rewards become available after provider approval and fraud checks.
            </p>
          </div>
          <div
            class="hero-chart"
          >
            <span
              style="height: 32%;"
            />
            <span
              style="height: 39%;"
            />
            <span
              style="height: 46%;"
            />
          </div>
          <div
            class="feed-card"
          >
            <div
              class="feed-title"
            >
              <svg
                class="lucide lucide-package-check"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m16 16 2 2 4-4"
                />
                <path
                  d="M21 10V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l2-1.14"
                />
                <path
                  d="m7.5 4.27 9 5.15"
                />
                <polyline
                  points="3.29 7 12 12 20.71 7"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="22"
                  y2="12"
                />
              </svg>
               Recent verified activity
            </div>
            <div
              class="feed-row"
            >
              <span
                class="avatar"
              >
                M
              </span>
              <p>
                <strong>
                  Maya
                </strong>
                 completed a finance survey
              </p>
              <strong>
                +$6.25
              </strong>
            </div>
            <div
              class="feed-row"
            >
              <span
                class="avatar"
              >
                J
              </span>
              <p>
                <strong>
                  Jon
                </strong>
                 hit a 9-day streak
              </p>
              <strong>
                +$1.45
              </strong>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
